--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,20 @@
     "cSpell.includeRegExpList": [
         "/\\**\\*/",
         "* \"'(?:[^'\\\\n]|\\\\\\\\')*'\""
+    ],
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MariaDB",
+            "name": "maskyourface",
+            "username": "root",
+            "database": "maskyourface",
+            "password": ""
+        }
     ]
 }
